// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template rendering > pack: candy > renders package.json.ejs 1`] = `
"{
  "name": "@acme/cli-ui",
  "version": "0.1.0",
  "description": "Acme CLI UI components — generated by asciibuddy.",
  "type": "module",
  "main": "./dist/index.js",
  "types": "./dist/index.d.ts",
  "exports": {
    ".": {
      "import": "./dist/index.js",
      "types": "./dist/index.d.ts"
    }
  },
  "files": ["dist"],
  "scripts": {
    "build": "tsc",
    "preview": "tsx src/preview.ts"
  },
  "dependencies": {
    "chalk": "^5.3.0",
    "cli-table3": "^0.6.5",
    "ora": "^8.0.1",
    "@clack/prompts": "^0.7.0",
    "cli-progress": "^3.12.0",
    "@types/cli-progress": "^3.11.5",
    "boxen": "^7.1.1",
    "diff": "^5.2.0",
    "@types/diff": "^5.2.1",
    "cli-highlight": "^2.1.11",
    "marked": "^12.0.0",
    "marked-terminal": "^7.1.0",
    "@types/marked-terminal": "^6.1.1",
    "gradient-string": "^2.0.2",
    "@types/gradient-string": "^1.1.6",
    "qrcode-terminal": "^0.12.0",
    "@types/qrcode-terminal": "^0.12.2"
  },
  "devDependencies": {
    "tsx": "^4.7.0",
    "typescript": "^5.5.0",
    "@types/node": "^20.12.0"
  }
}
"
`;

exports[`template rendering > pack: candy > renders src/box.ts.ejs 1`] = `
"import boxen, { type Options as BoxenOptions } from "boxen";
import { diffLines } from "diff";
import chalk from "chalk";
import { theme } from "./theme.js";

function borderStyle(): BoxenOptions["borderStyle"] {
  const t: string = theme.tableBorders;
  if (t === "rounded") return "round";
  if (t === "double") return "double";
  if (t === "ascii") return "classic";
  return "single";
}

export interface BoxOptions {
  title?: string;
  padding?: number;
  margin?: number;
  borderColor?: string;
}

export function box(content: string, opts: BoxOptions = {}): string {
  const rendered = boxen(content, {
    title: opts.title,
    padding: opts.padding ?? 1,
    margin: opts.margin ?? 0,
    borderStyle: borderStyle(),
    borderColor: opts.borderColor ?? theme.primaryColor,
  });
  return rendered;
}

export function diff(before: string, after: string): string {
  const parts = diffLines(before, after);
  const out: string[] = [];
  for (const part of parts) {
    const lines = part.value.split("\\n");
    if (lines[lines.length - 1] === "") lines.pop();
    for (const line of lines) {
      if (part.added) out.push(chalk.green("+ " + line));
      else if (part.removed) out.push(chalk.red("- " + line));
      else out.push(chalk.dim("  " + line));
    }
  }
  return out.join("\\n");
}
"
`;

exports[`template rendering > pack: candy > renders src/index.ts.ejs 1`] = `
"export { theme } from "./theme.js";
export { banner } from "./banner.js";
export { success, error, warning, info } from "./messages.js";
export { section } from "./section.js";
export { table } from "./table.js";
export { spinner } from "./spinner.js";
export { text, password, confirm, select, multiselect } from "./prompts.js";
export { progress, tasks } from "./progress.js";
export { box, diff } from "./box.js";
export { pinoTransport, winstonFormatter } from "./logger.js";
export { formatError, printError } from "./errors.js";
export { heading, h1, h2, h3 } from "./heading.js";
export { alert } from "./alert.js";
export { badge, badges } from "./badge.js";
export { defList } from "./defList.js";
export { tree } from "./tree.js";
export { steps } from "./steps.js";
export { stats } from "./stats.js";
export { code } from "./code.js";
export { timeline } from "./timeline.js";
export { emptyState } from "./emptyState.js";
export { rule } from "./rule.js";
export { columns } from "./columns.js";
export { sparkline } from "./sparkline.js";
export { barChart } from "./barChart.js";
export { gauge } from "./gauge.js";
export { json } from "./json.js";
export { markdown } from "./markdown.js";
export { link } from "./link.js";
export { gradient, gradientBanner } from "./gradient.js";
export { qr } from "./qr.js";
export { multiProgress } from "./multiProgress.js";
export { stopwatch, countdown } from "./stopwatch.js";
"
`;

exports[`template rendering > pack: candy > renders src/messages.ts.ejs 1`] = `
"import chalk from "chalk";
import { theme } from "./theme.js";

const SUCCESS_COLOR = "#22c55e";
const ERROR_COLOR = "#ef4444";
const WARNING_COLOR = "#f59e0b";
const INFO_COLOR = theme.primaryColor;

function pickDefault(list: readonly string[]): string {
  return list[0] ?? "";
}

export function success(message?: string): void {
  const text = message ?? pickDefault(theme.microcopy.success);
  process.stdout.write(
    chalk.hex(SUCCESS_COLOR)(theme.symbols.success) + " " + text + "\\n"
  );
}

export function error(message?: string): void {
  const text = message ?? pickDefault(theme.microcopy.error);
  process.stderr.write(
    chalk.hex(ERROR_COLOR)(theme.symbols.error) + " " + text + "\\n"
  );
}

export function warning(message?: string): void {
  const text = message ?? pickDefault(theme.microcopy.warning);
  process.stdout.write(
    chalk.hex(WARNING_COLOR)(theme.symbols.warning) + " " + text + "\\n"
  );
}

export function info(message?: string): void {
  const text = message ?? pickDefault(theme.microcopy.info);
  process.stdout.write(
    chalk.hex(INFO_COLOR)(theme.symbols.info) + " " + text + "\\n"
  );
}
"
`;

exports[`template rendering > pack: candy > renders src/preview.ts.ejs 1`] = `
"import {
  banner,
  success,
  error,
  warning,
  info,
  section,
  table,
  spinner,
  progress,
  tasks,
  box,
  diff,
  formatError,
  heading,
  alert,
  badge,
  badges,
  defList,
  tree,
  steps,
  stats,
  code,
  timeline,
  emptyState,
  rule,
  columns,
  sparkline,
  barChart,
  gauge,
  json,
  markdown,
  link,
  gradient,
} from "./index.js";

async function main() {
  banner();

  section("Messages");
  success();
  success("Deployed to acme.com");
  error();
  error("Build failed: missing env var");
  warning();
  warning("Using deprecated API");
  info();
  info("Tip: run --help for usage");

  section("Table");
  table(
    ["Service", "Status", "Region"],
    [
      ["api", "ready", "iad1"],
      ["worker", "ready", "sfo1"],
      ["queue", "pending", "fra1"],
    ]
  );

  section("Spinner");
  const stop = spinner("Doing important work...");
  await new Promise((r) => setTimeout(r, 1200));
  stop();
  success("Work complete");

  section("Progress");
  const bar = progress(20, "Downloading");
  for (let i = 0; i < 20; i++) {
    await new Promise((r) => setTimeout(r, 40));
    bar.increment();
  }
  bar.stop();

  section("Tasks");
  await tasks([
    { title: "Resolve dependencies", run: () => new Promise((r) => setTimeout(r, 300)) },
    { title: "Compile sources",       run: () => new Promise((r) => setTimeout(r, 400)) },
    { title: "Bundle assets",         run: () => new Promise((r) => setTimeout(r, 300)) },
  ]);

  section("Box");
  process.stdout.write(box("Branded panel content.\\nMulti-line supported.", { title: "Acme" }) + "\\n");

  section("Diff");
  process.stdout.write(diff("hello\\nworld\\n", "hello\\nbrand\\n") + "\\n");

  section("Errors");
  try {
    throw new Error("Example failure for preview");
  } catch (e) {
    process.stdout.write(formatError(e) + "\\n");
  }

  heading("Heading levels", 1);
  heading("Subsection", 2);
  heading("Detail", 3);

  section("Alert");
  alert("Database migrations completed successfully.\\nAll 12 tables updated.", { kind: "success", title: "Deploy" });
  alert("Token expires in 2 days. Rotate before expiry.", { kind: "warning", title: "Heads up", actions: ["acme auth rotate", "docs: rotation"] });

  section("Badges");
  process.stdout.write(badges([
    { text: "v2.0.0", tone: "default" },
    { text: "stable", tone: "success" },
    { text: "beta", tone: "warning" },
    { text: "deprecated", tone: "error" },
    { text: "internal", tone: "neutral" },
  ]) + "\\n");

  section("Config");
  defList({
    "Environment": "production",
    "Region": "iad1",
    "Replicas": 3,
    "Auto-scale": true,
    "Secrets": null,
  });

  section("Tree");
  tree({
    label: "acme/",
    children: [
      { label: "src/", children: [
        { label: "index.ts" },
        { label: "config.ts" },
      ] },
      { label: "tests/", children: [{ label: "index.test.ts" }] },
      { label: "package.json" },
    ],
  });

  section("Steps");
  steps(["Init", "Build", "Test", "Deploy"], 2);

  section("Stats");
  stats([
    { label: "Requests", value: "12.4k", delta: "+3.2%", trend: "up" },
    { label: "P99", value: "84ms", delta: "-12ms", trend: "down" },
    { label: "Errors", value: "0.04%", trend: "flat" },
  ]);

  section("Code");
  code("const x: number = 42;\\nfunction greet(name: string) {\\n  return \`hello, \${name}\`;\\n}", { lang: "typescript", showLineNumbers: true });

  section("Timeline");
  timeline([
    { time: "10:01", title: "Build started", kind: "info" },
    { time: "10:04", title: "Tests passed", body: "248 tests, 0 failures", kind: "success" },
    { time: "10:05", title: "Deploy queued", kind: "info" },
    { time: "10:08", title: "Deploy complete", kind: "success" },
  ]);

  section("Empty state");
  emptyState("No deployments yet.", { hint: "Run a deploy to see history here.", command: "acme deploy" });

  rule("v2.0.0");

  section("Columns");
  columns(["api", "worker", "queue", "scheduler", "auth", "cache", "billing", "search", "ingest", "ml"]);

  section("Sparklines");
  process.stdout.write("requests  " + sparkline([3, 5, 8, 4, 9, 12, 6, 7, 11, 14, 9, 13, 16]) + "  +18%\\n");
  process.stdout.write("latency   " + sparkline([82, 90, 88, 95, 91, 84, 80, 78, 82, 79, 75, 72, 70]) + "  -14ms\\n");

  section("Bundle size");
  barChart([
    { label: "client.js", value: 248 },
    { label: "vendor.js", value: 612 },
    { label: "styles.css", value: 84 },
    { label: "fonts.woff", value: 156 },
  ]);

  section("Gauges");
  gauge(72, 100, { label: "disk", warnAt: 0.7, errorAt: 0.9 });
  gauge(94, 100, { label: "memory", warnAt: 0.7, errorAt: 0.9 });
  gauge(31, 100, { label: "cpu", warnAt: 0.7, errorAt: 0.9 });

  section("JSON");
  json({ name: "Acme", version: "2.0.0", features: ["banner", "messages", "spinner"], deployed: true, replicas: 3, env: null });

  section("Markdown");
  markdown("## What's new\\n\\n- Added 12 new components\\n- Improved theme system\\n\\nSee [docs](https://example.com) or run \`acme help\`.");

  section("Link");
  process.stdout.write("Dashboard: " + link("acme.dev/dashboard", "https://acme.dev/dashboard") + "\\n");

  section("Gradient");
  process.stdout.write(gradient("ACME — branded gradient", ["#7C3AED", "#22d3ee"]) + "\\n");

  process.stdout.write("\\n");
}

main();
"
`;

exports[`template rendering > pack: candy > renders src/progress.ts.ejs 1`] = `
"import cliProgress from "cli-progress";
import ora, { type Ora } from "ora";
import chalk from "chalk";
import { theme } from "./theme.js";

export interface ProgressBar {
  update(value: number): void;
  increment(delta?: number): void;
  stop(): void;
}

export function progress(total: number, label = ""): ProgressBar {
  const color = chalk.hex(theme.primaryColor);
  const bar = new cliProgress.SingleBar(
    {
      format: \`\${label ? color(label) + " " : ""}\${color("{bar}")} {percentage}% | {value}/{total}\`,
      barCompleteChar: "█",
      barIncompleteChar: "░",
      hideCursor: true,
    },
    cliProgress.Presets.shades_classic
  );
  bar.start(total, 0);
  return {
    update: (value) => bar.update(value),
    increment: (delta = 1) => bar.increment(delta),
    stop: () => bar.stop(),
  };
}

export interface Task {
  title: string;
  run: () => Promise<void> | void;
}

export async function tasks(items: Task[]): Promise<void> {
  for (const t of items) {
    const instance: Ora = ora({
      text: chalk.hex(theme.primaryColor)(t.title),
      spinner: { frames: [...theme.spinnerFrames], interval: theme.spinnerInterval },
    }).start();
    try {
      await t.run();
      instance.stopAndPersist({
        symbol: chalk.hex("#22c55e")(theme.symbols.success),
        text: t.title,
      });
    } catch (err) {
      instance.stopAndPersist({
        symbol: chalk.hex("#ef4444")(theme.symbols.error),
        text: \`\${t.title} — \${(err as Error).message}\`,
      });
      throw err;
    }
  }
}
"
`;

exports[`template rendering > pack: candy > renders src/prompts.ts.ejs 1`] = `
"import * as p from "@clack/prompts";
import chalk from "chalk";
import { theme } from "./theme.js";

function paint(s: string): string {
  return chalk.hex(theme.primaryColor)(s);
}

function check<T>(value: T | symbol): T {
  if (p.isCancel(value)) {
    p.cancel("Cancelled.");
    process.exit(0);
  }
  return value as T;
}

export async function text(message: string, opts: { placeholder?: string; initialValue?: string } = {}): Promise<string> {
  return check(await p.text({ message: paint(message), ...opts }));
}

export async function password(message: string): Promise<string> {
  return check(await p.password({ message: paint(message) }));
}

export async function confirm(message: string, initialValue = true): Promise<boolean> {
  return check(await p.confirm({ message: paint(message), initialValue }));
}

export interface Choice<T extends string = string> {
  value: T;
  label?: string;
  hint?: string;
}

function toClackOptions<T extends string>(options: Choice<T>[]): Array<{ value: T; label: string; hint?: string }> {
  return options.map((o) => {
    const opt: { value: T; label: string; hint?: string } = {
      value: o.value,
      label: o.label ?? o.value,
    };
    if (o.hint !== undefined) opt.hint = o.hint;
    return opt;
  });
}

export async function select<T extends string>(message: string, options: Choice<T>[]): Promise<T> {
  return check(
    // eslint-disable-next-line @typescript-eslint/no-explicit-any
    await p.select({ message: paint(message), options: toClackOptions(options) as any })
  ) as T;
}

export async function multiselect<T extends string>(
  message: string,
  options: Choice<T>[],
  opts: { required?: boolean; initialValues?: T[] } = {}
): Promise<T[]> {
  return check(
    await p.multiselect({
      message: paint(message),
      // eslint-disable-next-line @typescript-eslint/no-explicit-any
      options: toClackOptions(options) as any,
      required: opts.required ?? false,
      initialValues: opts.initialValues,
    })
  ) as T[];
}
"
`;

exports[`template rendering > pack: candy > renders src/theme.ts.ejs 1`] = `
"export const theme = {
  name: "Acme",
  tagline: null,
  primaryColor: "#7C3AED",
  accentColor: "#7C3AED",
  pack: "candy",
  tone: "terse",
  symbols: {"success":"✿","error":"✖","warning":"▲","info":"◆","selected":"❤","unselected":"♡"},
  divider: {"left":"✦ ","right":" ✦","fill":"·"},
  tableBorders: "rounded",
  spinnerFrames: ["◜","◠","◝","◞","◡","◟"],
  spinnerInterval: 100,
  microcopy: {
    success: ["Yes!","Done"],
    error: ["Oops","Nope"],
    warning: ["Careful","Watch out"],
    info: ["Note","Hint"],
  },
} as const;

export type Theme = typeof theme;
"
`;

exports[`template rendering > pack: minimal-mono > renders package.json.ejs 1`] = `
"{
  "name": "@acme/cli-ui",
  "version": "0.1.0",
  "description": "Acme CLI UI components — generated by asciibuddy.",
  "type": "module",
  "main": "./dist/index.js",
  "types": "./dist/index.d.ts",
  "exports": {
    ".": {
      "import": "./dist/index.js",
      "types": "./dist/index.d.ts"
    }
  },
  "files": ["dist"],
  "scripts": {
    "build": "tsc",
    "preview": "tsx src/preview.ts"
  },
  "dependencies": {
    "chalk": "^5.3.0",
    "cli-table3": "^0.6.5",
    "ora": "^8.0.1",
    "@clack/prompts": "^0.7.0",
    "cli-progress": "^3.12.0",
    "@types/cli-progress": "^3.11.5",
    "boxen": "^7.1.1",
    "diff": "^5.2.0",
    "@types/diff": "^5.2.1",
    "cli-highlight": "^2.1.11",
    "marked": "^12.0.0",
    "marked-terminal": "^7.1.0",
    "@types/marked-terminal": "^6.1.1",
    "gradient-string": "^2.0.2",
    "@types/gradient-string": "^1.1.6",
    "qrcode-terminal": "^0.12.0",
    "@types/qrcode-terminal": "^0.12.2"
  },
  "devDependencies": {
    "tsx": "^4.7.0",
    "typescript": "^5.5.0",
    "@types/node": "^20.12.0"
  }
}
"
`;

exports[`template rendering > pack: minimal-mono > renders src/box.ts.ejs 1`] = `
"import boxen, { type Options as BoxenOptions } from "boxen";
import { diffLines } from "diff";
import chalk from "chalk";
import { theme } from "./theme.js";

function borderStyle(): BoxenOptions["borderStyle"] {
  const t: string = theme.tableBorders;
  if (t === "rounded") return "round";
  if (t === "double") return "double";
  if (t === "ascii") return "classic";
  return "single";
}

export interface BoxOptions {
  title?: string;
  padding?: number;
  margin?: number;
  borderColor?: string;
}

export function box(content: string, opts: BoxOptions = {}): string {
  const rendered = boxen(content, {
    title: opts.title,
    padding: opts.padding ?? 1,
    margin: opts.margin ?? 0,
    borderStyle: borderStyle(),
    borderColor: opts.borderColor ?? theme.primaryColor,
  });
  return rendered;
}

export function diff(before: string, after: string): string {
  const parts = diffLines(before, after);
  const out: string[] = [];
  for (const part of parts) {
    const lines = part.value.split("\\n");
    if (lines[lines.length - 1] === "") lines.pop();
    for (const line of lines) {
      if (part.added) out.push(chalk.green("+ " + line));
      else if (part.removed) out.push(chalk.red("- " + line));
      else out.push(chalk.dim("  " + line));
    }
  }
  return out.join("\\n");
}
"
`;

exports[`template rendering > pack: minimal-mono > renders src/index.ts.ejs 1`] = `
"export { theme } from "./theme.js";
export { banner } from "./banner.js";
export { success, error, warning, info } from "./messages.js";
export { section } from "./section.js";
export { table } from "./table.js";
export { spinner } from "./spinner.js";
export { text, password, confirm, select, multiselect } from "./prompts.js";
export { progress, tasks } from "./progress.js";
export { box, diff } from "./box.js";
export { pinoTransport, winstonFormatter } from "./logger.js";
export { formatError, printError } from "./errors.js";
export { heading, h1, h2, h3 } from "./heading.js";
export { alert } from "./alert.js";
export { badge, badges } from "./badge.js";
export { defList } from "./defList.js";
export { tree } from "./tree.js";
export { steps } from "./steps.js";
export { stats } from "./stats.js";
export { code } from "./code.js";
export { timeline } from "./timeline.js";
export { emptyState } from "./emptyState.js";
export { rule } from "./rule.js";
export { columns } from "./columns.js";
export { sparkline } from "./sparkline.js";
export { barChart } from "./barChart.js";
export { gauge } from "./gauge.js";
export { json } from "./json.js";
export { markdown } from "./markdown.js";
export { link } from "./link.js";
export { gradient, gradientBanner } from "./gradient.js";
export { qr } from "./qr.js";
export { multiProgress } from "./multiProgress.js";
export { stopwatch, countdown } from "./stopwatch.js";
"
`;

exports[`template rendering > pack: minimal-mono > renders src/messages.ts.ejs 1`] = `
"import chalk from "chalk";
import { theme } from "./theme.js";

const SUCCESS_COLOR = "#22c55e";
const ERROR_COLOR = "#ef4444";
const WARNING_COLOR = "#f59e0b";
const INFO_COLOR = theme.primaryColor;

function pickDefault(list: readonly string[]): string {
  return list[0] ?? "";
}

export function success(message?: string): void {
  const text = message ?? pickDefault(theme.microcopy.success);
  process.stdout.write(
    chalk.hex(SUCCESS_COLOR)(theme.symbols.success) + " " + text + "\\n"
  );
}

export function error(message?: string): void {
  const text = message ?? pickDefault(theme.microcopy.error);
  process.stderr.write(
    chalk.hex(ERROR_COLOR)(theme.symbols.error) + " " + text + "\\n"
  );
}

export function warning(message?: string): void {
  const text = message ?? pickDefault(theme.microcopy.warning);
  process.stdout.write(
    chalk.hex(WARNING_COLOR)(theme.symbols.warning) + " " + text + "\\n"
  );
}

export function info(message?: string): void {
  const text = message ?? pickDefault(theme.microcopy.info);
  process.stdout.write(
    chalk.hex(INFO_COLOR)(theme.symbols.info) + " " + text + "\\n"
  );
}
"
`;

exports[`template rendering > pack: minimal-mono > renders src/preview.ts.ejs 1`] = `
"import {
  banner,
  success,
  error,
  warning,
  info,
  section,
  table,
  spinner,
  progress,
  tasks,
  box,
  diff,
  formatError,
  heading,
  alert,
  badge,
  badges,
  defList,
  tree,
  steps,
  stats,
  code,
  timeline,
  emptyState,
  rule,
  columns,
  sparkline,
  barChart,
  gauge,
  json,
  markdown,
  link,
  gradient,
} from "./index.js";

async function main() {
  banner();

  section("Messages");
  success();
  success("Deployed to acme.com");
  error();
  error("Build failed: missing env var");
  warning();
  warning("Using deprecated API");
  info();
  info("Tip: run --help for usage");

  section("Table");
  table(
    ["Service", "Status", "Region"],
    [
      ["api", "ready", "iad1"],
      ["worker", "ready", "sfo1"],
      ["queue", "pending", "fra1"],
    ]
  );

  section("Spinner");
  const stop = spinner("Doing important work...");
  await new Promise((r) => setTimeout(r, 1200));
  stop();
  success("Work complete");

  section("Progress");
  const bar = progress(20, "Downloading");
  for (let i = 0; i < 20; i++) {
    await new Promise((r) => setTimeout(r, 40));
    bar.increment();
  }
  bar.stop();

  section("Tasks");
  await tasks([
    { title: "Resolve dependencies", run: () => new Promise((r) => setTimeout(r, 300)) },
    { title: "Compile sources",       run: () => new Promise((r) => setTimeout(r, 400)) },
    { title: "Bundle assets",         run: () => new Promise((r) => setTimeout(r, 300)) },
  ]);

  section("Box");
  process.stdout.write(box("Branded panel content.\\nMulti-line supported.", { title: "Acme" }) + "\\n");

  section("Diff");
  process.stdout.write(diff("hello\\nworld\\n", "hello\\nbrand\\n") + "\\n");

  section("Errors");
  try {
    throw new Error("Example failure for preview");
  } catch (e) {
    process.stdout.write(formatError(e) + "\\n");
  }

  heading("Heading levels", 1);
  heading("Subsection", 2);
  heading("Detail", 3);

  section("Alert");
  alert("Database migrations completed successfully.\\nAll 12 tables updated.", { kind: "success", title: "Deploy" });
  alert("Token expires in 2 days. Rotate before expiry.", { kind: "warning", title: "Heads up", actions: ["acme auth rotate", "docs: rotation"] });

  section("Badges");
  process.stdout.write(badges([
    { text: "v2.0.0", tone: "default" },
    { text: "stable", tone: "success" },
    { text: "beta", tone: "warning" },
    { text: "deprecated", tone: "error" },
    { text: "internal", tone: "neutral" },
  ]) + "\\n");

  section("Config");
  defList({
    "Environment": "production",
    "Region": "iad1",
    "Replicas": 3,
    "Auto-scale": true,
    "Secrets": null,
  });

  section("Tree");
  tree({
    label: "acme/",
    children: [
      { label: "src/", children: [
        { label: "index.ts" },
        { label: "config.ts" },
      ] },
      { label: "tests/", children: [{ label: "index.test.ts" }] },
      { label: "package.json" },
    ],
  });

  section("Steps");
  steps(["Init", "Build", "Test", "Deploy"], 2);

  section("Stats");
  stats([
    { label: "Requests", value: "12.4k", delta: "+3.2%", trend: "up" },
    { label: "P99", value: "84ms", delta: "-12ms", trend: "down" },
    { label: "Errors", value: "0.04%", trend: "flat" },
  ]);

  section("Code");
  code("const x: number = 42;\\nfunction greet(name: string) {\\n  return \`hello, \${name}\`;\\n}", { lang: "typescript", showLineNumbers: true });

  section("Timeline");
  timeline([
    { time: "10:01", title: "Build started", kind: "info" },
    { time: "10:04", title: "Tests passed", body: "248 tests, 0 failures", kind: "success" },
    { time: "10:05", title: "Deploy queued", kind: "info" },
    { time: "10:08", title: "Deploy complete", kind: "success" },
  ]);

  section("Empty state");
  emptyState("No deployments yet.", { hint: "Run a deploy to see history here.", command: "acme deploy" });

  rule("v2.0.0");

  section("Columns");
  columns(["api", "worker", "queue", "scheduler", "auth", "cache", "billing", "search", "ingest", "ml"]);

  section("Sparklines");
  process.stdout.write("requests  " + sparkline([3, 5, 8, 4, 9, 12, 6, 7, 11, 14, 9, 13, 16]) + "  +18%\\n");
  process.stdout.write("latency   " + sparkline([82, 90, 88, 95, 91, 84, 80, 78, 82, 79, 75, 72, 70]) + "  -14ms\\n");

  section("Bundle size");
  barChart([
    { label: "client.js", value: 248 },
    { label: "vendor.js", value: 612 },
    { label: "styles.css", value: 84 },
    { label: "fonts.woff", value: 156 },
  ]);

  section("Gauges");
  gauge(72, 100, { label: "disk", warnAt: 0.7, errorAt: 0.9 });
  gauge(94, 100, { label: "memory", warnAt: 0.7, errorAt: 0.9 });
  gauge(31, 100, { label: "cpu", warnAt: 0.7, errorAt: 0.9 });

  section("JSON");
  json({ name: "Acme", version: "2.0.0", features: ["banner", "messages", "spinner"], deployed: true, replicas: 3, env: null });

  section("Markdown");
  markdown("## What's new\\n\\n- Added 12 new components\\n- Improved theme system\\n\\nSee [docs](https://example.com) or run \`acme help\`.");

  section("Link");
  process.stdout.write("Dashboard: " + link("acme.dev/dashboard", "https://acme.dev/dashboard") + "\\n");

  section("Gradient");
  process.stdout.write(gradient("ACME — branded gradient", ["#7C3AED", "#22d3ee"]) + "\\n");

  process.stdout.write("\\n");
}

main();
"
`;

exports[`template rendering > pack: minimal-mono > renders src/progress.ts.ejs 1`] = `
"import cliProgress from "cli-progress";
import ora, { type Ora } from "ora";
import chalk from "chalk";
import { theme } from "./theme.js";

export interface ProgressBar {
  update(value: number): void;
  increment(delta?: number): void;
  stop(): void;
}

export function progress(total: number, label = ""): ProgressBar {
  const color = chalk.hex(theme.primaryColor);
  const bar = new cliProgress.SingleBar(
    {
      format: \`\${label ? color(label) + " " : ""}\${color("{bar}")} {percentage}% | {value}/{total}\`,
      barCompleteChar: "█",
      barIncompleteChar: "░",
      hideCursor: true,
    },
    cliProgress.Presets.shades_classic
  );
  bar.start(total, 0);
  return {
    update: (value) => bar.update(value),
    increment: (delta = 1) => bar.increment(delta),
    stop: () => bar.stop(),
  };
}

export interface Task {
  title: string;
  run: () => Promise<void> | void;
}

export async function tasks(items: Task[]): Promise<void> {
  for (const t of items) {
    const instance: Ora = ora({
      text: chalk.hex(theme.primaryColor)(t.title),
      spinner: { frames: [...theme.spinnerFrames], interval: theme.spinnerInterval },
    }).start();
    try {
      await t.run();
      instance.stopAndPersist({
        symbol: chalk.hex("#22c55e")(theme.symbols.success),
        text: t.title,
      });
    } catch (err) {
      instance.stopAndPersist({
        symbol: chalk.hex("#ef4444")(theme.symbols.error),
        text: \`\${t.title} — \${(err as Error).message}\`,
      });
      throw err;
    }
  }
}
"
`;

exports[`template rendering > pack: minimal-mono > renders src/prompts.ts.ejs 1`] = `
"import * as p from "@clack/prompts";
import chalk from "chalk";
import { theme } from "./theme.js";

function paint(s: string): string {
  return chalk.hex(theme.primaryColor)(s);
}

function check<T>(value: T | symbol): T {
  if (p.isCancel(value)) {
    p.cancel("Cancelled.");
    process.exit(0);
  }
  return value as T;
}

export async function text(message: string, opts: { placeholder?: string; initialValue?: string } = {}): Promise<string> {
  return check(await p.text({ message: paint(message), ...opts }));
}

export async function password(message: string): Promise<string> {
  return check(await p.password({ message: paint(message) }));
}

export async function confirm(message: string, initialValue = true): Promise<boolean> {
  return check(await p.confirm({ message: paint(message), initialValue }));
}

export interface Choice<T extends string = string> {
  value: T;
  label?: string;
  hint?: string;
}

function toClackOptions<T extends string>(options: Choice<T>[]): Array<{ value: T; label: string; hint?: string }> {
  return options.map((o) => {
    const opt: { value: T; label: string; hint?: string } = {
      value: o.value,
      label: o.label ?? o.value,
    };
    if (o.hint !== undefined) opt.hint = o.hint;
    return opt;
  });
}

export async function select<T extends string>(message: string, options: Choice<T>[]): Promise<T> {
  return check(
    // eslint-disable-next-line @typescript-eslint/no-explicit-any
    await p.select({ message: paint(message), options: toClackOptions(options) as any })
  ) as T;
}

export async function multiselect<T extends string>(
  message: string,
  options: Choice<T>[],
  opts: { required?: boolean; initialValues?: T[] } = {}
): Promise<T[]> {
  return check(
    await p.multiselect({
      message: paint(message),
      // eslint-disable-next-line @typescript-eslint/no-explicit-any
      options: toClackOptions(options) as any,
      required: opts.required ?? false,
      initialValues: opts.initialValues,
    })
  ) as T[];
}
"
`;

exports[`template rendering > pack: minimal-mono > renders src/theme.ts.ejs 1`] = `
"export const theme = {
  name: "Acme",
  tagline: null,
  primaryColor: "#7C3AED",
  accentColor: "#7C3AED",
  pack: "minimal-mono",
  tone: "terse",
  symbols: {"success":"✓","error":"✗","warning":"!","info":"i","selected":"●","unselected":"○"},
  divider: {"left":"── ","right":" ──","fill":"─"},
  tableBorders: "single",
  spinnerFrames: ["⠋","⠙","⠹","⠸","⠼","⠴","⠦","⠧","⠇","⠏"],
  spinnerInterval: 80,
  microcopy: {
    success: ["Done","OK"],
    error: ["Failed","Error"],
    warning: ["Warning","Heads up"],
    info: ["Note","FYI"],
  },
} as const;

export type Theme = typeof theme;
"
`;

exports[`template rendering > pack: retro-terminal > renders package.json.ejs 1`] = `
"{
  "name": "@acme/cli-ui",
  "version": "0.1.0",
  "description": "Acme CLI UI components — generated by asciibuddy.",
  "type": "module",
  "main": "./dist/index.js",
  "types": "./dist/index.d.ts",
  "exports": {
    ".": {
      "import": "./dist/index.js",
      "types": "./dist/index.d.ts"
    }
  },
  "files": ["dist"],
  "scripts": {
    "build": "tsc",
    "preview": "tsx src/preview.ts"
  },
  "dependencies": {
    "chalk": "^5.3.0",
    "cli-table3": "^0.6.5",
    "ora": "^8.0.1",
    "@clack/prompts": "^0.7.0",
    "cli-progress": "^3.12.0",
    "@types/cli-progress": "^3.11.5",
    "boxen": "^7.1.1",
    "diff": "^5.2.0",
    "@types/diff": "^5.2.1",
    "cli-highlight": "^2.1.11",
    "marked": "^12.0.0",
    "marked-terminal": "^7.1.0",
    "@types/marked-terminal": "^6.1.1",
    "gradient-string": "^2.0.2",
    "@types/gradient-string": "^1.1.6",
    "qrcode-terminal": "^0.12.0",
    "@types/qrcode-terminal": "^0.12.2"
  },
  "devDependencies": {
    "tsx": "^4.7.0",
    "typescript": "^5.5.0",
    "@types/node": "^20.12.0"
  }
}
"
`;

exports[`template rendering > pack: retro-terminal > renders src/box.ts.ejs 1`] = `
"import boxen, { type Options as BoxenOptions } from "boxen";
import { diffLines } from "diff";
import chalk from "chalk";
import { theme } from "./theme.js";

function borderStyle(): BoxenOptions["borderStyle"] {
  const t: string = theme.tableBorders;
  if (t === "rounded") return "round";
  if (t === "double") return "double";
  if (t === "ascii") return "classic";
  return "single";
}

export interface BoxOptions {
  title?: string;
  padding?: number;
  margin?: number;
  borderColor?: string;
}

export function box(content: string, opts: BoxOptions = {}): string {
  const rendered = boxen(content, {
    title: opts.title,
    padding: opts.padding ?? 1,
    margin: opts.margin ?? 0,
    borderStyle: borderStyle(),
    borderColor: opts.borderColor ?? theme.primaryColor,
  });
  return rendered;
}

export function diff(before: string, after: string): string {
  const parts = diffLines(before, after);
  const out: string[] = [];
  for (const part of parts) {
    const lines = part.value.split("\\n");
    if (lines[lines.length - 1] === "") lines.pop();
    for (const line of lines) {
      if (part.added) out.push(chalk.green("+ " + line));
      else if (part.removed) out.push(chalk.red("- " + line));
      else out.push(chalk.dim("  " + line));
    }
  }
  return out.join("\\n");
}
"
`;

exports[`template rendering > pack: retro-terminal > renders src/index.ts.ejs 1`] = `
"export { theme } from "./theme.js";
export { banner } from "./banner.js";
export { success, error, warning, info } from "./messages.js";
export { section } from "./section.js";
export { table } from "./table.js";
export { spinner } from "./spinner.js";
export { text, password, confirm, select, multiselect } from "./prompts.js";
export { progress, tasks } from "./progress.js";
export { box, diff } from "./box.js";
export { pinoTransport, winstonFormatter } from "./logger.js";
export { formatError, printError } from "./errors.js";
export { heading, h1, h2, h3 } from "./heading.js";
export { alert } from "./alert.js";
export { badge, badges } from "./badge.js";
export { defList } from "./defList.js";
export { tree } from "./tree.js";
export { steps } from "./steps.js";
export { stats } from "./stats.js";
export { code } from "./code.js";
export { timeline } from "./timeline.js";
export { emptyState } from "./emptyState.js";
export { rule } from "./rule.js";
export { columns } from "./columns.js";
export { sparkline } from "./sparkline.js";
export { barChart } from "./barChart.js";
export { gauge } from "./gauge.js";
export { json } from "./json.js";
export { markdown } from "./markdown.js";
export { link } from "./link.js";
export { gradient, gradientBanner } from "./gradient.js";
export { qr } from "./qr.js";
export { multiProgress } from "./multiProgress.js";
export { stopwatch, countdown } from "./stopwatch.js";
"
`;

exports[`template rendering > pack: retro-terminal > renders src/messages.ts.ejs 1`] = `
"import chalk from "chalk";
import { theme } from "./theme.js";

const SUCCESS_COLOR = "#22c55e";
const ERROR_COLOR = "#ef4444";
const WARNING_COLOR = "#f59e0b";
const INFO_COLOR = theme.primaryColor;

function pickDefault(list: readonly string[]): string {
  return list[0] ?? "";
}

export function success(message?: string): void {
  const text = message ?? pickDefault(theme.microcopy.success);
  process.stdout.write(
    chalk.hex(SUCCESS_COLOR)(theme.symbols.success) + " " + text + "\\n"
  );
}

export function error(message?: string): void {
  const text = message ?? pickDefault(theme.microcopy.error);
  process.stderr.write(
    chalk.hex(ERROR_COLOR)(theme.symbols.error) + " " + text + "\\n"
  );
}

export function warning(message?: string): void {
  const text = message ?? pickDefault(theme.microcopy.warning);
  process.stdout.write(
    chalk.hex(WARNING_COLOR)(theme.symbols.warning) + " " + text + "\\n"
  );
}

export function info(message?: string): void {
  const text = message ?? pickDefault(theme.microcopy.info);
  process.stdout.write(
    chalk.hex(INFO_COLOR)(theme.symbols.info) + " " + text + "\\n"
  );
}
"
`;

exports[`template rendering > pack: retro-terminal > renders src/preview.ts.ejs 1`] = `
"import {
  banner,
  success,
  error,
  warning,
  info,
  section,
  table,
  spinner,
  progress,
  tasks,
  box,
  diff,
  formatError,
  heading,
  alert,
  badge,
  badges,
  defList,
  tree,
  steps,
  stats,
  code,
  timeline,
  emptyState,
  rule,
  columns,
  sparkline,
  barChart,
  gauge,
  json,
  markdown,
  link,
  gradient,
} from "./index.js";

async function main() {
  banner();

  section("Messages");
  success();
  success("Deployed to acme.com");
  error();
  error("Build failed: missing env var");
  warning();
  warning("Using deprecated API");
  info();
  info("Tip: run --help for usage");

  section("Table");
  table(
    ["Service", "Status", "Region"],
    [
      ["api", "ready", "iad1"],
      ["worker", "ready", "sfo1"],
      ["queue", "pending", "fra1"],
    ]
  );

  section("Spinner");
  const stop = spinner("Doing important work...");
  await new Promise((r) => setTimeout(r, 1200));
  stop();
  success("Work complete");

  section("Progress");
  const bar = progress(20, "Downloading");
  for (let i = 0; i < 20; i++) {
    await new Promise((r) => setTimeout(r, 40));
    bar.increment();
  }
  bar.stop();

  section("Tasks");
  await tasks([
    { title: "Resolve dependencies", run: () => new Promise((r) => setTimeout(r, 300)) },
    { title: "Compile sources",       run: () => new Promise((r) => setTimeout(r, 400)) },
    { title: "Bundle assets",         run: () => new Promise((r) => setTimeout(r, 300)) },
  ]);

  section("Box");
  process.stdout.write(box("Branded panel content.\\nMulti-line supported.", { title: "Acme" }) + "\\n");

  section("Diff");
  process.stdout.write(diff("hello\\nworld\\n", "hello\\nbrand\\n") + "\\n");

  section("Errors");
  try {
    throw new Error("Example failure for preview");
  } catch (e) {
    process.stdout.write(formatError(e) + "\\n");
  }

  heading("Heading levels", 1);
  heading("Subsection", 2);
  heading("Detail", 3);

  section("Alert");
  alert("Database migrations completed successfully.\\nAll 12 tables updated.", { kind: "success", title: "Deploy" });
  alert("Token expires in 2 days. Rotate before expiry.", { kind: "warning", title: "Heads up", actions: ["acme auth rotate", "docs: rotation"] });

  section("Badges");
  process.stdout.write(badges([
    { text: "v2.0.0", tone: "default" },
    { text: "stable", tone: "success" },
    { text: "beta", tone: "warning" },
    { text: "deprecated", tone: "error" },
    { text: "internal", tone: "neutral" },
  ]) + "\\n");

  section("Config");
  defList({
    "Environment": "production",
    "Region": "iad1",
    "Replicas": 3,
    "Auto-scale": true,
    "Secrets": null,
  });

  section("Tree");
  tree({
    label: "acme/",
    children: [
      { label: "src/", children: [
        { label: "index.ts" },
        { label: "config.ts" },
      ] },
      { label: "tests/", children: [{ label: "index.test.ts" }] },
      { label: "package.json" },
    ],
  });

  section("Steps");
  steps(["Init", "Build", "Test", "Deploy"], 2);

  section("Stats");
  stats([
    { label: "Requests", value: "12.4k", delta: "+3.2%", trend: "up" },
    { label: "P99", value: "84ms", delta: "-12ms", trend: "down" },
    { label: "Errors", value: "0.04%", trend: "flat" },
  ]);

  section("Code");
  code("const x: number = 42;\\nfunction greet(name: string) {\\n  return \`hello, \${name}\`;\\n}", { lang: "typescript", showLineNumbers: true });

  section("Timeline");
  timeline([
    { time: "10:01", title: "Build started", kind: "info" },
    { time: "10:04", title: "Tests passed", body: "248 tests, 0 failures", kind: "success" },
    { time: "10:05", title: "Deploy queued", kind: "info" },
    { time: "10:08", title: "Deploy complete", kind: "success" },
  ]);

  section("Empty state");
  emptyState("No deployments yet.", { hint: "Run a deploy to see history here.", command: "acme deploy" });

  rule("v2.0.0");

  section("Columns");
  columns(["api", "worker", "queue", "scheduler", "auth", "cache", "billing", "search", "ingest", "ml"]);

  section("Sparklines");
  process.stdout.write("requests  " + sparkline([3, 5, 8, 4, 9, 12, 6, 7, 11, 14, 9, 13, 16]) + "  +18%\\n");
  process.stdout.write("latency   " + sparkline([82, 90, 88, 95, 91, 84, 80, 78, 82, 79, 75, 72, 70]) + "  -14ms\\n");

  section("Bundle size");
  barChart([
    { label: "client.js", value: 248 },
    { label: "vendor.js", value: 612 },
    { label: "styles.css", value: 84 },
    { label: "fonts.woff", value: 156 },
  ]);

  section("Gauges");
  gauge(72, 100, { label: "disk", warnAt: 0.7, errorAt: 0.9 });
  gauge(94, 100, { label: "memory", warnAt: 0.7, errorAt: 0.9 });
  gauge(31, 100, { label: "cpu", warnAt: 0.7, errorAt: 0.9 });

  section("JSON");
  json({ name: "Acme", version: "2.0.0", features: ["banner", "messages", "spinner"], deployed: true, replicas: 3, env: null });

  section("Markdown");
  markdown("## What's new\\n\\n- Added 12 new components\\n- Improved theme system\\n\\nSee [docs](https://example.com) or run \`acme help\`.");

  section("Link");
  process.stdout.write("Dashboard: " + link("acme.dev/dashboard", "https://acme.dev/dashboard") + "\\n");

  section("Gradient");
  process.stdout.write(gradient("ACME — branded gradient", ["#7C3AED", "#22d3ee"]) + "\\n");

  process.stdout.write("\\n");
}

main();
"
`;

exports[`template rendering > pack: retro-terminal > renders src/progress.ts.ejs 1`] = `
"import cliProgress from "cli-progress";
import ora, { type Ora } from "ora";
import chalk from "chalk";
import { theme } from "./theme.js";

export interface ProgressBar {
  update(value: number): void;
  increment(delta?: number): void;
  stop(): void;
}

export function progress(total: number, label = ""): ProgressBar {
  const color = chalk.hex(theme.primaryColor);
  const bar = new cliProgress.SingleBar(
    {
      format: \`\${label ? color(label) + " " : ""}\${color("{bar}")} {percentage}% | {value}/{total}\`,
      barCompleteChar: "█",
      barIncompleteChar: "░",
      hideCursor: true,
    },
    cliProgress.Presets.shades_classic
  );
  bar.start(total, 0);
  return {
    update: (value) => bar.update(value),
    increment: (delta = 1) => bar.increment(delta),
    stop: () => bar.stop(),
  };
}

export interface Task {
  title: string;
  run: () => Promise<void> | void;
}

export async function tasks(items: Task[]): Promise<void> {
  for (const t of items) {
    const instance: Ora = ora({
      text: chalk.hex(theme.primaryColor)(t.title),
      spinner: { frames: [...theme.spinnerFrames], interval: theme.spinnerInterval },
    }).start();
    try {
      await t.run();
      instance.stopAndPersist({
        symbol: chalk.hex("#22c55e")(theme.symbols.success),
        text: t.title,
      });
    } catch (err) {
      instance.stopAndPersist({
        symbol: chalk.hex("#ef4444")(theme.symbols.error),
        text: \`\${t.title} — \${(err as Error).message}\`,
      });
      throw err;
    }
  }
}
"
`;

exports[`template rendering > pack: retro-terminal > renders src/prompts.ts.ejs 1`] = `
"import * as p from "@clack/prompts";
import chalk from "chalk";
import { theme } from "./theme.js";

function paint(s: string): string {
  return chalk.hex(theme.primaryColor)(s);
}

function check<T>(value: T | symbol): T {
  if (p.isCancel(value)) {
    p.cancel("Cancelled.");
    process.exit(0);
  }
  return value as T;
}

export async function text(message: string, opts: { placeholder?: string; initialValue?: string } = {}): Promise<string> {
  return check(await p.text({ message: paint(message), ...opts }));
}

export async function password(message: string): Promise<string> {
  return check(await p.password({ message: paint(message) }));
}

export async function confirm(message: string, initialValue = true): Promise<boolean> {
  return check(await p.confirm({ message: paint(message), initialValue }));
}

export interface Choice<T extends string = string> {
  value: T;
  label?: string;
  hint?: string;
}

function toClackOptions<T extends string>(options: Choice<T>[]): Array<{ value: T; label: string; hint?: string }> {
  return options.map((o) => {
    const opt: { value: T; label: string; hint?: string } = {
      value: o.value,
      label: o.label ?? o.value,
    };
    if (o.hint !== undefined) opt.hint = o.hint;
    return opt;
  });
}

export async function select<T extends string>(message: string, options: Choice<T>[]): Promise<T> {
  return check(
    // eslint-disable-next-line @typescript-eslint/no-explicit-any
    await p.select({ message: paint(message), options: toClackOptions(options) as any })
  ) as T;
}

export async function multiselect<T extends string>(
  message: string,
  options: Choice<T>[],
  opts: { required?: boolean; initialValues?: T[] } = {}
): Promise<T[]> {
  return check(
    await p.multiselect({
      message: paint(message),
      // eslint-disable-next-line @typescript-eslint/no-explicit-any
      options: toClackOptions(options) as any,
      required: opts.required ?? false,
      initialValues: opts.initialValues,
    })
  ) as T[];
}
"
`;

exports[`template rendering > pack: retro-terminal > renders src/theme.ts.ejs 1`] = `
"export const theme = {
  name: "Acme",
  tagline: null,
  primaryColor: "#7C3AED",
  accentColor: "#7C3AED",
  pack: "retro-terminal",
  tone: "terse",
  symbols: {"success":"[OK]","error":"[ERR]","warning":"[!!]","info":"[..]","selected":"[X]","unselected":"[ ]"},
  divider: {"left":"=[ ","right":" ]=","fill":"="},
  tableBorders: "ascii",
  spinnerFrames: ["|","/","-","\\\\"],
  spinnerInterval: 120,
  microcopy: {
    success: ["COMPLETE","OK"],
    error: ["FAILED","FAULT"],
    warning: ["WARN","CAUTION"],
    info: ["INFO","LOG"],
  },
} as const;

export type Theme = typeof theme;
"
`;
